fixed padding jump

--- a/app/assets/stylesheets/hackers.css.scss
+++ b/app/assets/stylesheets/hackers.css.scss
@@ -220,4 +220,5 @@ body {
 .file_alert {
 	width: 265px;
 	margin-left: 25% !important;
+	padding: 10px;
 }
